# NaSha-Engine

./: .gitmodules  CMakeLists.txt  README.md  compile.sh
Nasha/src/: Nasha.h  OneFile.cpp  OneFileh.txt
Nasha/src/Nasha/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  BufferHelpers.cpp  BufferHelpers.h  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  Core.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  EntryPoint.h  Events.cpp  Events.h  FrameInfo.h  GameObject.cpp  GameObject.h  Log.cpp  Log.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  Utils.h  Window.cpp  Window.h
Nasha/src/Nasha/RenderingSystems/: PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h
Nasha/src/Nasha/shaders/: glsl_shader.frag  glsl_shader.frag.spv  glsl_shader.vert  glsl_shader.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv
Nasha/vendors/Vulkan/Licenses/: LICENSE.txt
Nasha/vendors/Vulkan/include/vulkan/: vulkan_core.h
Nasha/vendors/Vulkan/lib/cmake/: HLSLTargets.cmake  OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  SPVRemapperTargets.cmake  glslangTargets.cmake  glslangValidatorTargets.cmake  spirv-remapTargets.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools/: SPIRV-ToolsTarget-release.cmake  SPIRV-ToolsTarget.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools-diff/: SPIRV-Tools-diffTargets.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools-link/: SPIRV-Tools-linkTargets.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools-lint/: SPIRV-Tools-lintTargets.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools-opt/: SPIRV-Tools-optTargets.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools-reduce/: SPIRV-Tools-reduceTarget.cmake
Nasha/vendors/Vulkan/lib/cmake/SPIRV-Tools-tools/: SPIRV-Tools-toolsTargets-release.cmake  SPIRV-Tools-toolsTargets.cmake
Nasha/vendors/Vulkan/lib/cmake/glslang/: glslang-config-version.cmake  glslang-targets-release.cmake  glslang-targets.cmake
Nasha/vendors/Vulkan/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc  shaderc.pc  spirv-cross-c-shared.pc  vulkan.pc
Sandbox/src/: main.cpp
Sandbox/src/Nasha/: main.cpp
sandbox/nasha/: main.cpp
source/nasha/: nasha.inl
source/nasha/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Control.cpp  Control.h  Core.inl  EntryPoint.h  FrameInfo.h  GameObject.cpp  GameObject.h  Model.cpp  Model.h  Utils.h  Window.cpp  Window.h
source/nasha/renderer/: Renderer.cpp  Renderer.h  renderer_types.inl
source/nasha/renderer/vulkan/: vk_buffer.cpp  vk_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_pipeline.cpp  vk_pipeline.h  vk_swapchain.cpp  vk_swapchain.h
source/nasha/shaders/: PointLight.frag  PointLight.frag.spv  PointLight.vert  PointLight.vert.spv  SimpleShader.frag  SimpleShader.frag.spv  SimpleShader.vert  SimpleShader.vert.spv
source/nasha/systems/: PointLightSystem.cpp  PointLightSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
vendors/GLFW/: INSTALL_RECEIPT.json
